--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -690,36 +690,60 @@ config TOUCHSCREEN_CY8C_TS
 	  To compile this driver as a module, choose M here: the
 	  module will be called cy8c_ts.
 
-config TOUCHSCREEN_CYTTSP_CORE
-	tristate "Cypress TTSP touchscreen"
+config TOUCHSCREEN_CYTTSP_I2C
+	tristate "Cypress TTSP i2c touchscreen"
+	depends on I2C
+	default n
 	help
-         Say Y here if you have a touchscreen using controller from
-         the Cypress TrueTouch(tm) Standard Product family connected
-         to your system. You will also need to select appropriate
-         bus connection below.
+	  Say Y here if you have a Cypress TTSP touchscreen
+	  connected to your system's i2c bus.
 
-	 If unsure, say N.
+	  If unsure, say N.
 
 	  To compile this driver as a module, choose M here: the
-	  module will be called cyttsp_core.
-
-config TOUCHSCREEN_CYTTSP_I2C
-        tristate "support I2C bus connection"
-        depends on TOUCHSCREEN_CYTTSP_CORE && I2C
-	help
-	Say Y here if the touchscreen is connected via I2C bus.
-
-	 To compile this driver as a module, choose M here: the
-	 module will be called cyttsp_i2c.
+	  module will be called cyttsp_i2c.
 
 config TOUCHSCREEN_CYTTSP_SPI
-        tristate "support SPI bus connection"
-        depends on TOUCHSCREEN_CYTTSP_CORE && SPI_MASTER
+	default n
+	tristate "Cypress TTSP spi touchscreen"
+	depends on SPI_MASTER
 	help
-	Say Y here if the touchscreen is connected via SPI bus.
+	  Say Y here if you have a Cypress TTSP touchscreen
+	  connected to your system's spi bus.
 
-	 To compile this driver as a module, choose M here: the
-	 module will be called cyttsp_spi.
+	  If unsure, say N.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cyttsp_spi.
+
+config TOUCHSCREEN_CYTTSP_CORE
+	default y
+	bool "Cypress TTSP touchscreen core"
+	depends on TOUCHSCREEN_CYTTSP_I2C || TOUCHSCREEN_CYTTSP_SPI
+	help
+	  Always activated for Cypress TTSP touchscreen
+
+config TOUCHSCREEN_CYTTSP_MAX_X
+	default 479
+	int "Cypress TTSP touchscreen X resolution"
+	depends on TOUCHSCREEN_CYTTSP_CORE
+
+config TOUCHSCREEN_CYTTSP_MAX_Y
+	default 853
+	int "Cypress TTSP touchscreen Y resolution"
+	depends on TOUCHSCREEN_CYTTSP_CORE
+
+config TOUCHSCREEN_CYTTSP_MAX_Z
+	default 100
+	int "Cypress TTSP touchscreen Z resolution"
+	depends on TOUCHSCREEN_CYTTSP_CORE
+
+config TOUCHSCREEN_CYTTSP_KEY
+	default n
+	bool "Cypress TTSP touchkey"
+	depends on TOUCHSCREEN_CYTTSP_CORE
+	help
+	  Activated for Cypress TTSP touchkey function
 
 config TOUCHSCREEN_CY8CTMA300_SPI
 	default n
