--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -179,13 +179,15 @@ obj-$(CONFIG_ARCH_MSM8960) += board-msm8960-regulator.o
 obj-$(CONFIG_MACH_SEMC_ZEUS) += board-semc_zeus.o
 obj-$(CONFIG_MACH_SEMC_ANZU) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-anzu.o leds-anzu.o gpio-anzu.o charger-anzu.o
 obj-$(CONFIG_MACH_SEMC_HALLON) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-hallon.o leds-hallon.o gpio-hallon.o charger-hallon.o fpc_test-hallon.o
-obj-$(CONFIG_MACH_SEMC_IYOKAN) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-iyokan.o leds-iyokan.o gpio-iyokan.o charger-iyokan.o
+obj-$(CONFIG_MACH_SEMC_IYOKAN) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-iyokan.o leds-iyokan.o gpio-iyokan.o charger-iyokan.o touch-iyokan.o
 obj-$(CONFIG_MACH_SEMC_URUSHI) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-urushi.o leds-urushi.o gpio-urushi.o charger-urushi.o
-obj-$(CONFIG_MACH_SEMC_SMULTRON) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-smultron.o leds-smultron.o gpio-smultron.o charger-smultron.o
-obj-$(CONFIG_MACH_SEMC_MANGO) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-mango.o leds-mango.o gpio-mango.o charger-mango.o
+obj-$(CONFIG_MACH_SEMC_SMULTRON) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-smultron.o leds-smultron.o gpio-smultron.o charger-smultron.o touch-smultron.o
+obj-$(CONFIG_MACH_SEMC_MANGO) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-mango.o leds-mango.o gpio-mango.o charger-mango.o touch-mango.o
+obj-$(CONFIG_MACH_SEMC_COCONUT) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-coconut.o leds-coconut.o gpio-coconut.o charger-coconut.o touch-coconut.o
 obj-$(CONFIG_MACH_SEMC_STRAWBERRY) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-strawberry.o leds-strawberry.o gpio-strawberry.o charger-strawberry.o
 obj-$(CONFIG_MACH_SEMC_AKANE) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-akane.o leds-akane.o gpio-akane.o charger-akane.o
 obj-$(CONFIG_MACH_SEMC_AZUSA) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-azusa.o leds-azusa.o gpio-azusa.o charger-azusa.o
+obj-$(CONFIG_MACH_SEMC_SATSUMA) += board-semc_mogami.o board-semc_mogami-rfkill.o keypad-satsuma.o leds-satsuma.o gpio-satsuma.o charger-satsuma.o touch-satsuma.o
 
 obj-$(CONFIG_MACH_SEMC_FUJI_NOZOMI) += board-semc_fuji.o gpiomux-fuji_nozomi.o keypad-fuji_nozomi.o vreg-fuji_nozomi.o leds-fuji_nozomi.o board-semc_fuji-usb.o board-semc_fuji-video.o board-semc_fuji-sdcc.o board-semc_fuji-pmic.o charger-fuji_nozomi.o board-semc_fuji-rfkill.o touch-fuji_nozomi.o gyro-semc_fuji_nozomi.o gyro-semc_fuji_common.o nfc-fuji_nozomi.o
 obj-$(CONFIG_MACH_SEMC_FUJI_NOZOMI_DCM) += board-semc_fuji.o gpiomux-fuji_nozomi.o keypad-fuji_nozomi.o vreg-fuji_nozomi.o leds-fuji_nozomi.o board-semc_fuji-usb.o board-semc_fuji-video.o board-semc_fuji-sdcc.o board-semc_fuji-pmic.o charger-fuji_nozomi.o board-semc_fuji-rfkill.o touch-fuji_nozomi.o gyro-semc_fuji_nozomi.o gyro-semc_fuji_common.o
