--- a/arch/arm/configs/semc_mango_defconfig
+++ b/arch/arm/configs/semc_mango_defconfig
@@ -1062,7 +1062,7 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_TI_DAC7512 is not set
 CONFIG_UID_STAT=y
 # CONFIG_WL127X_RFKILL is not set
-# CONFIG_APANIC is not set
+CONFIG_APANIC=y
 # CONFIG_TSIF is not set
 # CONFIG_ZEUS_ESD is not set
 # CONFIG_HAPTIC_ISA1200 is not set
@@ -2455,7 +2455,7 @@ CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
 # CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION is not set
-# CONFIG_ANDROID_RAM_CONSOLE_EARLY_INIT is not set
+CONFIG_ANDROID_RAM_CONSOLE_EARLY_INIT=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
